@@ -1623,6 +1623,65 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|testHashCodeEquals
+specifier|public
+name|void
+name|testHashCodeEquals
+parameter_list|()
+block|{
+name|OpenBitSet
+name|bs1
+init|=
+operator|new
+name|OpenBitSet
+argument_list|(
+literal|200
+argument_list|)
+decl_stmt|;
+name|OpenBitSet
+name|bs2
+init|=
+operator|new
+name|OpenBitSet
+argument_list|(
+literal|64
+argument_list|)
+decl_stmt|;
+name|bs1
+operator|.
+name|set
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+name|bs2
+operator|.
+name|set
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bs1
+argument_list|,
+name|bs2
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bs1
+operator|.
+name|hashCode
+argument_list|()
+argument_list|,
+name|bs2
+operator|.
+name|hashCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
